<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/FocusHolder"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <requestFocus>
            </requestFocus>
        </LinearLayout>

        <TextView
            android:id="@+id/MasterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_title" />

        <AutoCompleteTextView
            android:id="@+id/MasterAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:imeOptions="actionDone"
            android:isScrollContainer="false"
            android:singleLine="true"
            android:text="@string/master_default_addr"
            android:typeface="monospace" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/VehicleTypeSpinner"
            android:entries="@array/vehicle_types"
            android:prompt="@string/vehicle_type_prompt" />

        <LinearLayout
            android:id="@+id/ButtonLayoutService"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <edu.cmu.ri.airboat.server.ReadOnlyToggleButton
                android:id="@+id/ConnectToggle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.66"
                android:text="@string/connect_toggle" >
            </edu.cmu.ri.airboat.server.ReadOnlyToggleButton>

            <Button
                android:id="@+id/DebugButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/debug_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/IpAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipaddress_title" />

        <TextView
            android:id="@+id/IpAddressText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ipaddress_text"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/FailsafeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failsafe_title" />

        <AutoCompleteTextView
            android:id="@+id/FailsafeAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:imeOptions="actionDone"
            android:isScrollContainer="false"
            android:singleLine="true"
            android:text="@string/failsafe_default_addr"
            android:typeface="monospace" />

        <LinearLayout
            android:id="@+id/ButtonLayoutFailsafe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <edu.cmu.ri.airboat.server.ReadOnlyToggleButton
                android:id="@+id/FailsafeToggle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.66"
                android:text="@string/failsafe_toggle" >
            </edu.cmu.ri.airboat.server.ReadOnlyToggleButton>

            <Button
                android:id="@+id/HomeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/home_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>